docs: add JVM tuning section to technical-details.md